--- a/views/search.ejs
+++ b/views/search.ejs
@@ -17,52 +17,52 @@
 
 
 <div id="content">
-    <div id="result-info">About <%- cursor.totalResults %> results (<%- cursor.searchResultTime %> seconds) </div>
+    <div id="result-info">About <%- searchInformation.totalResults %> results (<%- searchInformation.searchTime %> seconds) </div>
 
-    <% for (var i = 0, l = results.length; i < l; i++) { %>
+    <% for (var i = 0, l = items.length; i < l; i++) { %>
     <div class="content-item">
-        <h3><a href="<%- results[i].unescapedUrl %>"><%- results[i].title %></a></h3>
-        <div class="content-item-link"><%- results[i].formattedUrl %></div>
+        <h3><a href="<%- items[i].link %>"><%- items[i].title %></a></h3>
+        <div class="content-item-link"><%- items[i].formattedUrl %></div>
         <div class="content-item-desc">
-            <%- results[i].content %>
+            <%- items[i].snippet %>
         </div>
     </div>
     <% } %>
 
-    <div id="nav">
-        <ul>
-            <% if (cursor.currentPageIndex > 0) { %>
-            <li class="nav-prev">
-                <a href="/search?q=<%- q %>&start=<%- (cursor.currentPageIndex - 1) * 10 %>">
-                    <div class="nav-item-img"></div>
-                    <div>上一页</div>
-                </a>
-            </li>
-            <% } %>
+    <!--<div id="nav">-->
+        <!--<ul>-->
+            <!--<% if (cursor.currentPageIndex > 0) { %>-->
+            <!--<li class="nav-prev">-->
+                <!--<a href="/search?q=<%- q %>&start=<%- (cursor.currentPageIndex - 1) * 10 %>">-->
+                    <!--<div class="nav-item-img"></div>-->
+                    <!--<div>上一页</div>-->
+                <!--</a>-->
+            <!--</li>-->
+            <!--<% } %>-->
 
-            <% for (var i = 0, l = cursor.pages.length; i < l; i++) { %>
-            <% if (i == cursor.currentPageIndex) { %>
-            <li class="active">
-                <% } else { %>
-            <li>
-                <% } %>
-                <a href="/search?q=<%- q %>&start=<%- cursor.pages[i].start %>">
-                    <div class="nav-item-img"></div>
-                    <div><%- cursor.pages[i].label %></div>
-                </a>
-            </li>
-            <% } %>
+            <!--<% for (var i = 0, l = cursor.pages.length; i < l; i++) { %>-->
+            <!--<% if (i == cursor.currentPageIndex) { %>-->
+            <!--<li class="active">-->
+                <!--<% } else { %>-->
+            <!--<li>-->
+                <!--<% } %>-->
+                <!--<a href="/search?q=<%- q %>&start=<%- cursor.pages[i].start %>">-->
+                    <!--<div class="nav-item-img"></div>-->
+                    <!--<div><%- cursor.pages[i].label %></div>-->
+                <!--</a>-->
+            <!--</li>-->
+            <!--<% } %>-->
 
-            <% if (cursor.currentPageIndex < 9) { %>
-            <li class="nav-next">
-                <a href="/search?q=<%- q %>&start=<%- (cursor.currentPageIndex + 1) * 10 %>">
-                    <div class="nav-item-img"></div>
-                    <div>下一页</div>
-                </a>
-            </li>
-            <% } %>
-        </ul>
-    </div>
+            <!--<% if (cursor.currentPageIndex < 9) { %>-->
+            <!--<li class="nav-next">-->
+                <!--<a href="/search?q=<%- q %>&start=<%- (cursor.currentPageIndex + 1) * 10 %>">-->
+                    <!--<div class="nav-item-img"></div>-->
+                    <!--<div>下一页</div>-->
+                <!--</a>-->
+            <!--</li>-->
+            <!--<% } %>-->
+        <!--</ul>-->
+    <!--</div>-->
 </div>
 
 
